Trying to resolve a bug on iPhone X

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,7 @@ body {
 /* MEDIA BREAKPOINTS */
 @media (max-width: 576px) {
     #bgButton i {
-        margin-right: 1rem;
+        margin-right: 2rem;
     }
 }
 
